<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.bicycle.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/header_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/header_top"
            android:textSize="@dimen/header_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/header_top"
            android:layout_alignRight="@id/header_top"
            android:layout_below="@id/header_top"
            android:text="@string/header_bottom"
            android:textSize="@dimen/header_text_size" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/center_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/placeholder" />

        <Button
            style="@style/FourButtons"
            android:layout_above="@id/center_text"
            android:text="@string/windproof" />

        <Button
            style="@style/FourButtons"
            android:layout_below="@id/center_text"
            android:text="@string/breathable" />

        <Button
            style="@style/FourButtons"
            android:layout_toEndOf="@id/center_text"
            android:layout_toRightOf="@id/center_text"
            android:text="@string/well_insulated" />

        <Button
            style="@style/FourButtons"
            android:layout_toLeftOf="@id/center_text"
            android:layout_toStartOf="@id/center_text"
            android:text="@string/waterproof" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />
</LinearLayout>
